src/objects/netsuite_conn__Account_Sync_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>netsuite_conn__Account_Field_Ids__c</fullName>
        <label>Account Field Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Create__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Disable_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Parent_Sync_Level__c</fullName>
        <label>Parent Sync Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Parent_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Sync_Only_With_Opportunity__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync Only With Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Update__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Use_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Batch</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Sync Settings</label>
</CustomObject>